Advanced/logging/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: kube-logging
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: logging.karimlabs.com
    http:
      paths:
      - backend:
          serviceName: kibana
          servicePort: 5601
